// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDropDownHeader should render correctly with the provided totalDataSourceCount 1`] = `
<EuiTitle
  size="xxxs"
>
  <EuiFlexGroup
    responsive={false}
  >
    <EuiFlexItem>
      DATA SOURCES
       (
      5
      )
    </EuiFlexItem>
    <div
      className="dataSourceDropDownHeaderInvisibleFocusable"
      tabIndex={0}
    />
    <EuiFlexItem
      grow={false}
    >
      <EuiLink
        onClick={[Function]}
      >
        Manage
      </EuiLink>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiTitle>
`;

exports[`DataSourceDropDownHeader should render the activeDataSourceCount/totalDataSourceCount when both provided 1`] = `
<DataSourceDropDownHeader
  activeDataSourceCount={2}
  totalDataSourceCount={5}
>
  <EuiTitle
    size="xxxs"
  >
    <EuiFlexGroup
      className="euiTitle euiTitle--xxxsmall"
      responsive={false}
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiTitle euiTitle--xxxsmall"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            DATA SOURCES
             (
            2/5
            )
          </div>
        </EuiFlexItem>
        <div
          className="dataSourceDropDownHeaderInvisibleFocusable"
          tabIndex={0}
        />
        <EuiFlexItem
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiLink
              onClick={[Function]}
            >
              <button
                className="euiLink euiLink--primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Manage
              </button>
            </EuiLink>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </EuiTitle>
</DataSourceDropDownHeader>
`;
